2008-11-16  David Teller  <David.Teller@univ-orleans.fr>

	* src/core/extlib/extBigarray.ml*: created

	* src/main/nothreads/batteries.mllib: [HashtblLabels] removed

	* src/main/nothreads/batteries.ml: [MoreLabels] added, [HashtblLabels] removed
	
	* src/main/threads/batteries.ml: [MoreLabels] added, [HashtblLabels] removed

	* src/main/threads/batteries.mllib: [HashtblLabels] removed

	* src/core/batteries_core_threads.ml: [HashtblLabels] removed

	* src/core/batteries_core.ml: [HashtblLabels] removed

	* src/core/extlib/extHashtbl.ml*: [map] now passes to [f] both the value and the key

	* src/core/batteries_core_threads.ml: removed [SetLabels]

	* src/main/threads/batteries.ml: removed [SetLabels]

	* src/core/extlib/extSet.mli: [Labels], [ExceptionLess] added

	* src/core/extlib/extArray.ml*: [Cap.Labels] added

2008-11-15  David Teller  <David.Teller@univ-orleans.fr>

	* Makefile.in: [reinstall] now builds [top], [syntax]
	
	* src/core/extlib.mlpack: [EnumLabels] removed

	* src/core/batteries_core.ml: [ArrayLabels] removed

	* src/core/extlib/extArray.ml: module [Labels] added

	* src/core/extlib/extArray.ml*: [filter_map] added

	* src/core/extlib/extArray.ml*: module [ExceptionLess] added

	* src/core/extlib/extArray.ml*: [iter2i] added

	* src/core/extlib/enum.ml: module [Labels] added

	* src/core/extlib/enumLabels.ml*: removed

	* src/syntax/pa_openin/pa_openin_r.ml: [multi_module_expr] now uses keyword [include], [module_binding0] exported

	* src/syntax/pa_openin/pa_openin.ml: [multi_module_expr] now uses keyword [include]

	* doc/batteries/html/extensions.html: Documentation on multi-aliasing

	* src/core/extlib/enum.mli: Documentation on override modules

	* src/main/nothreads/batteries.ml: [Common] added

	* src/main/threads/batteries.ml: [RMutex], [Common] added

	* src/core/extlib_threads/extPervasivesThreads.ml: removed content

	* src/core/extlib/extPervasives.ml*: [lock] added

	* src/core/extlib/concurrent.ml*: [create] added
